--- a/Plist/khoindvn11.plist
+++ b/Plist/khoindvn11.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20China%20Huaneng%20Group.ipa</string>
+					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20BEIJING%20TIANYUAN%20NEW%20ENERGY%20TECHNOLOGY%20CO.%2CLTD..ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -33,7 +33,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>p3.xyz.yyyue.esign-khơindvn10</string>
+				<string>p3.xyz.yyyue.esign-khơindvn11</string>
 				<key>bundle-version</key>
 				<string>1</string>
 				<key>kind</key>
