--- a/Plist/khoindvn18.plist
+++ b/Plist/khoindvn18.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/IPNSO/IPNSO.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20BANK%20NEGARA%20INDONESIA%20(PERSERO)%2C%20PT%20TBK.ipa</string>
+					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20BANK%20NEGARA%20INDONESIA%20(PERSERO)%2C%20PT%20TBK.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
