--- a/Plist/khoindvn2.plist
+++ b/Plist/khoindvn2.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/IPNSO/IPNSO.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20CHINA%20MOBILE%20GROUP%20CHONGQING%20CO.LTD.ipa</string>
+					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20CHINA%20MOBILE%20GROUP%20CHONGQING%20CO.LTD.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
