--- a/Plist/khoindvn21.plist
+++ b/Plist/khoindvn21.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/IPNSO/IPNSO.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution_%20FPT%20Software%20Company%20Limited%20V1.ipa</string>
+					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution_%20FPT%20Software%20Company%20Limited%20V1.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -39,7 +39,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>ESign</string>
+				<string>ESign FPT V1</string>
 			</dict>
 		</dict>
 	</array>
