--- a/Plist/khoindvn23.plist
+++ b/Plist/khoindvn23.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/IPNSO/IPNSO.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20Social%20Governance%20Coordination%20Center%20of%20Haicang%20District%2CXiamen.ipa</string>
+					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20Social%20Governance%20Coordination%20Center%20of%20Haicang%20District%2CXiamen.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
