--- a/Plist/khoindvn3.plist
+++ b/Plist/khoindvn3.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/IPNSO/IPNSO.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20Henan%20Liquor%20Easy%20Commercial%20Inc..ipa</string>
+					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20Henan%20Liquor%20Easy%20Commercial%20Inc..ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
