--- a/Plist/khoindvn5.plist
+++ b/Plist/khoindvn5.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/IPNSO/IPNSO.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20OLD%20MUTUAL%20LIFE%20ASSURANCE%20COMPANY%20(MALAWI)%20LIMITED.ipa</string>
+					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20OLD%20MUTUAL%20LIFE%20ASSURANCE%20COMPANY%20(MALAWI)%20LIMITED.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
