--- a/Plist/khoindvn6.plist
+++ b/Plist/khoindvn6.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/IPNSO/IPNSO.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20Hunan%20Airport%20Management%20Group%20Co.Ltd.ipa</string>
+					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20Hunan%20Airport%20Management%20Group%20Co.Ltd.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
