--- a/Plist/khoindvn7.plist
+++ b/Plist/khoindvn7.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/IPNSO/IPNSO.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20Shen%20Zhen%20Shi%20YiHaoHuLian%20TECHNOLOGY%20LTD..ipa</string>
+					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/main/ESignIPA/ESign_iPhone%20Distribution%3A%20Shen%20Zhen%20Shi%20YiHaoHuLian%20TECHNOLOGY%20LTD..ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
