--- a/plist-khoindvn/khoindvn43.plist
+++ b/plist-khoindvn/khoindvn43.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/main/ESign-IPA/ESign-Kho%CC%9Bindvn_iPhone%20Distribution:%20HDFC%20Life%20Insurance%20Company%20Limited.ipa</string>
+					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/main/ESign-IPA/ESign-Kho%CC%9Bindvn_iPhone%20Distribution:%20HDFC%20Life%20Insurance%20Company%20Limited-V1.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
