--- a/plist-khoindvn/khoindvn24.plist
+++ b/plist-khoindvn/khoindvn24.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/main/ESign-IPA/ESign-Kho%CC%9Bindvn_iPhone%20Distribution:%20Mylan%20Inc..ipa</string>
+					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/main/ESign-IPA/ESign_iPhone%20Distribution:%20Mylan%20Inc..ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
