--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,6 @@
-khoindvn
+steps:
+  - name: Explain why this job ran
+    uses: octo-org/action-name@main
+    with:
+      entrypoint: /bin/echo
+      args: The ${{ github.event_name }} event triggered this step.
