--- a/Foder/iosgame.plist
+++ b/Foder/iosgame.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://taigunny.io.vn/iOS-GunGiangSinh.ipa</string>
+					<string>https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Foder/iOSGame-46721_2024-11-29_1732892775.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
